Added createUser operations and its tests and its documentation
