# src/main/kotlin/pt/isel/ls/docs/openApiDocs.yaml
@@ -8,12 +8,12 @@ info:
     name: "Apache 2.0"
     url: "http://www.apache.org/licenses/LICENSE-2.0.html"
 tags:
+  - name: "User"
+    description: "Operations about user"
   - name: "Routes"
     description: "Route management"
   - name: "Sports and Activities"
     description: "Sports and Activity management."
-  - name: "User"
-    description: "Operations about user"
 servers:
   - url: http://localhost:9000/api
     description: Local Server
@@ -58,6 +58,28 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UsersList"
+    post:
+      tags:
+        - "User"
+      summary: "Add a new user"
+      description: "Adds a new user with the given name and email and returns its identifier and auth token"
+      operationId: "addUser"
+      requestBody:
+        description: "Name and Email to attribute to the user."
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/UserCreationBody"
+      responses:
+        "201":
+          description: "A user has been sucessfully created!"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ResUserCreation"
+        "400":
+          description: "A parameter is missing or is incorrect"
 components:
   schemas:
     User:
@@ -72,6 +94,20 @@ components:
         id:
           type: "string"
           example: "guestID"
+    ResUserCreation:
+      type: "object"
+      properties:
+        authToken:
+          type: "string"
+        id:
+          type: "string"
+    UserCreationBody:
+      type: "object"
+      properties:
+        name:
+          type: "string"
+        email:
+          type: "string"
     UsersList:
       type: "object"
       properties:
@@ -79,3 +115,11 @@ components:
           type: "array"
           items:
             $ref: "#/components/schemas/User"
+    Route:
+      type: "object"
+      properties:
+        startLocation:
+          type: "integer"
+          format: "int64"
+        endLocation:
+          type: "string"
